# cmd/api/handler/v1/auth/auth.go
@@ -12,8 +12,8 @@ import (
 )
 
 type AuthHandler interface {
-	Register(ctx *fiber.Ctx) error
 	Login(ctx *fiber.Ctx) error
+	GetUserInfo(ctx *fiber.Ctx) error
 }
 
 type authHandler struct {
@@ -26,35 +26,11 @@ func NewAuthHandler(authService service.AuthService) AuthHandler {
 	}
 }
 
-// Register godoc
-// @Summary Register a new user
-// @Description Register a new user
-// @Tags auth
-// @Accept application/json
-// @Produce application/json
-// @Param registerRequest body dto.RegisterRequest true "Register Request"
-// @Success 200 {object} map[string]interface{}
-// @Router /auth/register [post]
-func (h *authHandler) Register(ctx *fiber.Ctx) error {
-	var request dto.RegisterRequest
-	if err := ctx.BodyParser(&request); err != nil {
-		err = errors.New(i18n.CreateMsg(ctx, messages.PasswordsDoNotMatch))
-		log.Error(err.Error())
-		return cresponse.ErrorResponse(ctx, fiber.StatusBadRequest, err.Error())
-	}
-
-	status, err := h.authService.Register(ctx, request)
-	if err != nil {
-		return cresponse.ErrorResponse(ctx, status, err.Error())
-	}
-
-	return nil
-}
-
 // Login godoc
 // @Summary Login a user
-// @Description Login a user
-// @Tags auth
+// @Description You can login with your identity number or customer number. If you are a new user, you can register with the /account/register endpoint.
+// @Description If you registered before, your password will be sent to your e-mail address.
+// @Tags Auth
 // @Accept application/json
 // @Produce application/json
 // @Param loginRequest body dto.LoginRequest true "Login Request"
@@ -69,6 +45,25 @@ func (h *authHandler) Login(ctx *fiber.Ctx) error {
 	}
 
 	response, status, err := h.authService.Login(ctx, request)
+	if err != nil {
+		return cresponse.ErrorResponse(ctx, status, err.Error())
+	}
+
+	return cresponse.SuccessResponse(ctx, status, response)
+}
+
+// GetUserInfo godoc
+// @Summary Get user info
+// @Description You can use this endpoint to get user information.
+// @Tags Auth
+// @Accept application/json
+// @Produce application/json
+// @Security ApiKeyAuth
+// @Param Authorization header string true "Bearer <token>"
+// @Success 200 {object} dto.UserInfoResponse
+// @Router /auth/user-info [get]
+func (h *authHandler) GetUserInfo(ctx *fiber.Ctx) error {
+	response, status, err := h.authService.GetUserInfo(ctx)
 	if err != nil {
 		return cresponse.ErrorResponse(ctx, status, err.Error())
 	}
